--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-filter": "^2.0.2",
     "gulp-iconfont": "^1.0.0",
     "gulp-imagemin": "^0.6.2",
+	"gulp-include": "^2.0.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^1.4.2",
     "gulp-rename": "^1.2.0",
@@ -48,6 +49,8 @@
     "karma-webpack": "^1.5.0",
     "lodash": "^3.5.0",
     "merge-stream": "^0.1.7",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
     "object-assign": "^2.0.0",
     "pretty-hrtime": "~0.2.1",
     "require-dir": "^0.1.0",
